--- a/Battleship Warfare/usersettings.json
+++ b/Battleship Warfare/usersettings.json
@@ -1,1 +1,1 @@
-{"settings": {"lang": 1, "fullScreen": true, "W": 800, "H": 450, "Hz": 30, "shakeIntensity": 4, "showLetter": true, "inversLetter": false, "mainVolume": 100, "musicVolume": 100, "effectVolume": 100}}
+{"settings": {"lang": 1, "fullScreen": false, "W": 800, "H": 450, "Hz": 30, "shakeIntensity": 4, "showLetter": true, "inversLetter": false, "mainVolume": 100, "musicVolume": 100, "effectVolume": 100}}
